# baby-app

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  FIX_TASKS.md  PERFORMANCE_RATIONALE.md  README.md  create_test_data.py  docker-compose.test.yml  docker-compose.yml  fix_cookie_routers.py  pyproject.toml  render.yaml  requirements.txt  reset_db.py
.github/workflows/: release.yml
.specify/specs/: auth.md  contraction.md  dashboard.md  family_settings_baby_management.md  family_settings_header.md  schedule.md  system_design.md  unimplemented_features.md
alembic/: env.py
alembic/versions/: 001_initial_migration.py  002_add_user_sessions_table.py  003_add_family_and_baby_models.py  162383dfc515_add_baby_permissions_table.py  7a2488f01c46_add_due_date_to_babies.py  d91eb8885793_add_performance_indexes.py
app/: __init__.py  config.py  database.py  dependencies.py  main.py
app/middleware/: csrf.py
app/models/: __init__.py  baby.py  baby_permission.py  contraction.py  diaper.py  family.py  family_user.py  feeding.py  growth.py  schedule.py  session.py  sleep.py  user.py
app/routers/: auth.py  baby.py  diaper.py  (+7 more)
frontend/: Dockerfile.dev  package-lock.json  package.json
tests/: conftest.py  test_auth_api.py  test_baby_deletion.py  test_contraction.py  test_csrf_protection.py  test_dashboard_prenatal.py  test_dependencies.py  test_feeding_vulnerability.py  test_permission_service.py  test_rbac_permissions.py  test_services.py  test_sleep.py  test_statistics.py  test_update_permissions_bug.py
(+119 files in other folders)
